fixed accessibililty of mobile menu, as well as not letting the user scroll or focus any items behind the mobile menu. added sticky header. fixed accessibility of contact form.

--- a/public/css/_global-styles/main.css
+++ b/public/css/_global-styles/main.css
@@ -223,15 +223,23 @@ nav a {
 
 body {
   min-height: 100vh;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
   @media screen and (min-width: 0px) {
-    body {
+    body, body #top {
       padding-top: 9.6rem; } }
   @media screen and (min-width: 480px) {
-    body {
+    body, body #top {
       padding-top: 9.6rem; } }
   @media screen and (min-width: 840px) {
-    body {
+    body, body #top {
       padding-top: 19.2rem; } }
+
+.no-scroll {
+  overflow: hidden; }
+
+#top {
+  position: absolute;
+  top: 0; }
